--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Traffic",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/cars.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -21,9 +21,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/cars.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.traffic.traffic_user"
     },
     "web": {
       "favicon": "./assets/favicon.png"
